--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Dépendances et build générés
-/node_modules/
-/frontend/node_modules/
-/backend/node_modules/
-# Variables d'environnement sensibles
+node_modules/
 .env
+frontend/node_modules/
+backend/node_modules/
