--- a/backend/.env.test
+++ b/backend/.env.test
@@ -4,10 +4,10 @@ SESSION_SECRET=test-session-secret-minimum-32-characters-long
 
 # Admin login credentials (for web interface)
 LOGIN_ADMIN_USER=testadmin
-LOGIN_ADMIN_PASS=$2b$10$test.hash.for.testing.purposes.only
+LOGIN_ADMIN_PASS=$2b$10$Iyo5Lr3uKaoCiqEq3uGJPemMFxkE5EaAJX17uYAiIVTkNKnpYEqSa
 
 # Form admin name (who fills forms and can see others' responses)
-FORM_ADMIN_NAME=riri
+FORM_ADMIN_NAME=testadmin
 
 APP_BASE_URL=http://localhost:3000
 FRONTEND_URL=http://localhost:3001
