--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon app.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:dynamic": "jest dynamic.option.integration.test.js",
+    "test:all": "jest && cd ../frontend && jest --config tests/jest.config.js"
   },
   "keywords": [],
   "author": "",
