--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Dépendances et build générés
 node_modules/
 .env
+.env.local
+.env*.local
 frontend/node_modules/
 backend/node_modules/
 **/.DS_Store
